@@ -1,5 +1,11 @@
 2007-10-27  Jens Granseuer  <jensgr@gmx.net>
 
+	* main.c: (free_display_info), (update_display_info),
+	(read_display_info), (apply_config), (revert_config): revert some of
+	the previous "clean-up", add some new, and fix another leak
+
+2007-10-27  Jens Granseuer  <jensgr@gmx.net>
+
 	* main.c: (run_revert_dialog), (main): fix string capitalization
 
 2007-10-27  Jens Granseuer  <jensgr@gmx.net>
